<resources>
    <string name="app_name">Resume Eder Padilla</string>
    <string name="eder">Eder Padilla</string>
    <string name="github">Git Hub</string>
    <string name="linked_in">Linked In</string>
    <string name="show_resume">Show resume</string>
    <string name="github_profile">https://github.com/ederpadilla</string>
    <string name="linked_in_profile">https://www.linkedin.com/in/android-dev-eder-padilla/</string>
    <string name="position">Android Engineer at Globant</string>
</resources>
