<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

    <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/mProfileImage"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/eder"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="4dp"
            />

    <TextView
            android:text="@string/eder"
            style="@style/TitleTextView"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/mProfileImage"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            />
    <TextView
            android:text="@string/position"
            style="@style/TitleTextView"
            android:padding="8dp"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTitle"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            />
    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:id="@+id/linearLayout"
            >

        <ImageView
                android:id="@+id/mLinkedInImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/ic_linkedin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/linked_in_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        <ImageView
                android:id="@+id/mGithubImage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginTop="8dp"
                app:srcCompat="@drawable/ic_github"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/github_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                />
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            android:gravity="center">
        <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="61dp"
                android:layout_height="82dp"
                android:layout_gravity="center"
                app:lottie_fileName="phone_anim.json"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"/>

        <TextView
                android:text="@string/show_resume"
                style="@style/TitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textAlignment="center"
                />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>